# hifi

./: README.md
cmake/macros/: SetupHifiPlugin.cmake
cmake/modules/: FindBoost.cmake  FindOSVR.cmake  FindOpenVR.cmake
interface/: CMakeLists.txt
interface/resources/qml/hifi/audio/: MicBar.qml
interface/src/: Application.cpp
interface/src/ui/overlays/: Web3DOverlay.cpp
libraries/gl/src/gl/: GLHelpers.cpp
libraries/gpu-gl/src/gpu/gl/: GLBackend.cpp
libraries/gpu-gl/src/gpu/gl45/: GL45BackendTexture.cpp
libraries/gpu/src/gpu/: Buffer.cpp
libraries/physics/src/: ObjectActionTractor.cpp
libraries/shared/src/: Transform.h
libraries/ui-plugins/src/ui-plugins/: PluginContainer.cpp
libraries/ui/src/: VrMenu.cpp
plugins/: CMakeLists.txt
plugins/hifiOSVR/: CMakeLists.txt
plugins/hifiOSVR/src/: OsvrControllerManager.cpp  OsvrControllerManager.h  OsvrDisplayPlugin.cpp  OsvrDisplayPlugin.h  OsvrHelpers.cpp  OsvrHelpers.h  OsvrProvider.cpp  plugin.json
plugins/openvr/: CMakeLists.txt
plugins/openvr/src/: OpenVrDisplayPlugin.cpp  OpenVrHelpers.cpp  OpenVrHelpers.h  ViveControllerManager.cpp
plugins/osvrHMD/: CMakeLists.txt
plugins/osvrHMD/src/: OsvrHmd.json  OsvrHmdControllerManager.cpp  OsvrHmdControllerManager.h  OsvrHmdDisplayPlugin.cpp  OsvrHmdDisplayPlugin.h  OsvrHmdProvider.cpp
